package-info jspecify